--- a/css/custom.css
+++ b/css/custom.css
@@ -81,6 +81,7 @@ html, body {
 	height: 15rem;
 	margin: 1rem;
 	object-fit: cover;
+	cursor: pointer;
 }
 
 .team-feature .team-list .team-image img {
@@ -311,6 +312,10 @@ html, body {
 #research-desc {
 	width: 21rem;
 	margin: 12rem 0 0 -23rem;
+}
+
+#team-desc {
+	transition: opacity 1s ease;
 }
 
 #team-desc > h6,
