--- a/css/custom.css
+++ b/css/custom.css
@@ -80,12 +80,25 @@ html, body {
 	width: 15rem;
 	height: 15rem;
 	margin: 1rem;
+	cursor: pointer;
+	opacity: 0.5;
+	transition: opacity 0.75s ease;
 	object-fit: cover;
+}
+
+.team-list .team-image.active img {
+	opacity: 1;
 }
 
 .team-feature .team-list .team-image img {
 	height: 32rem;
 	width: 20rem;
+	opacity: 1;
+}
+
+.team-list-container {
+	margin: 0 auto;
+	width: 73rem;
 }
 
 .dark .heading-block:not(.not-dark):after {
@@ -160,7 +173,7 @@ html, body {
 
 #header.full-header #primary-menu > ul li > a {
 	padding: 0.25em 0;
-	font-weight: 200;
+	font-weight: 100;
 	font-size: 0.9em;
 	text-shadow: 0 1px 1rem rgba(0, 0, 20, 0.4);
 	color: white;
@@ -187,7 +200,7 @@ html, body {
 #copyrights .col_half > span,
 #copyrights .col_half > div > a {
 	color: white;
-	font-weight: 200;
+	font-weight: 100;
 	font-size: 0.75em;
 	opacity: 0.75;
 }
@@ -233,7 +246,7 @@ html, body {
 .feature-box.media-box .fbox-desc div {
 	font-size: 0.75em;
 	color: rgb(254, 254, 0);
-	font-weight: 200;
+	font-weight: 100;
 	cursor: pointer;
 }
 
@@ -313,12 +326,16 @@ html, body {
 	margin: 12rem 0 0 -23rem;
 }
 
+#team-desc {
+	transition: opacity 1s ease;
+}
+
 #team-desc > h6,
 #team-desc > h3,
 #research-desc > h3 {
 	font-size: 1.6em;
 	margin: 2rem 0;
-	font-weight: 200;
+	font-weight: 100;
 }
 
 #team-desc > h6,
@@ -401,7 +418,7 @@ a,
 }
 
 .page-section.dark .heading-block h2 {
-  font-weight: 200;
+  font-weight: 100;
   line-height: 1em;
   color: rgba(255, 255, 255, 0.6);
 }
@@ -415,7 +432,7 @@ a,
 }
 
 #section-hero .heading-block p {
-	font: 100 normal 1.1em 'Raleway', sans-serif;
+	font: 100 normal 1.1em 'Museo', sans-serif;
 	letter-spacing: 0.05em;
 	text-align: left;
 	text-transform: lowercase;
@@ -424,7 +441,7 @@ a,
 }
 
 #section-hero .heading-block p {
-	font: 100 normal 1.1em 'Raleway', sans-serif;
+	font: 100 normal 1.1em 'Museo', sans-serif;
 	letter-spacing: 0.05em;
 	text-align: left;
 	text-transform: lowercase;
@@ -488,7 +505,7 @@ a,
 
 #section-investment .investment-desc h2,
 #section-investment .investment-desc p {
-	font-weight: 200;
+	font-weight: 100;
 	font-size: 1.9em;
 }
 
