--- a/css/custom.css
+++ b/css/custom.css
@@ -224,13 +224,13 @@ html, body {
 	margin: 2rem;
 }
 
-.media-list {
+.media-list > .row {
 	margin: 0 auto;
 	display: flex;
 	width: calc(100% - 25rem);
 }
 
-.media-list > .media-item {
+.media-list .media-item {
 	flex: 1;
 	margin: 1rem;
 }
@@ -244,6 +244,7 @@ html, body {
 
 .feature-box.media-box .fbox-desc h4,
 .feature-box.media-box .fbox-desc div {
+	margin-top: 2rem;
 	font-size: 0.75em;
 	color: rgb(254, 254, 0);
 	font-weight: 100;
@@ -251,13 +252,23 @@ html, body {
 }
 
 .feature-box.media-box .fbox-desc div {
-	margin-top: 4rem;
+	margin-top: 7rem;
 	font-size: 2.5em;
-	color: white;
+	color: rgb(96, 172, 64);
 }
 
 .media-item .feature-box.media-box {
-	height: 17rem;
+	height: 24rem;
+}
+
+@media(max-width:1200px) {
+	.feature-box.media-box .fbox-desc div {
+		margin-top: 0rem;
+	}
+
+	.media-item .feature-box.media-box {
+		height: 17rem;
+	}
 }
 
 .team-item {
@@ -320,18 +331,26 @@ html, body {
 	margin: 0 auto;
 }
 
-#team-desc,
-#research-desc {
+.sidebar-content {
 	width: 21rem;
-	margin: 12rem 0 0 -23rem;
+	margin: 16rem 0 0 -23rem;
+	position: absolute;
+	z-index: 100;
+	max-height: 32rem;
+	overflow-y: auto;
+	transition: opacity 1s ease;
 }
 
-#team-desc {
-	transition: opacity 1s ease;
+#video-filters {
+	overflow-y: auto;
+	margin-left: -24.5rem;
+	cursor: pointer;
 }
 
 #team-desc > h6,
 #team-desc > h3,
+#video-filters > h6,
+#video-filters > h3,
 #research-desc > h3 {
 	font-size: 1.6em;
 	margin: 2rem 0;
@@ -339,19 +358,23 @@ html, body {
 }
 
 #team-desc > h6,
+#video-filters > h6,
 #research-desc > h3 {
 	color: rgb(254, 254, 0);
 }
 
+#video-filters > h3
 #team-desc > h3 {
 	font-weight: 400;
 }
 
+#video-filters > h6,
 #team-desc > h6 {
 	font-size: 1em;
 	margin: 0;
 }
 
+#video-filters > p,
 #team-desc > p,
 #research-desc > p {
 	margin: 1rem 0;
@@ -458,7 +481,7 @@ a,
   transition: font-size 0.2s ease;
 }
 
-@media(max-width:1144px) {
+@media(max-width:1200px) {
 	#section-hero.page-section.dark .heading-block h2 {
 		font-size: 4.5em;
 	}
