--- a/cn/css/custom.css
+++ b/cn/css/custom.css
@@ -174,7 +174,7 @@ html, body {
 #header.full-header #primary-menu > ul li > a {
 	padding: 0.25em 0;
 	font-weight: 100;
-	font-size: 0.9em;
+	font-size: 0.8em;
 	text-shadow: 0 1px 1rem rgba(0, 0, 20, 0.4);
 	color: white;
 }
@@ -224,13 +224,13 @@ html, body {
 	margin: 2rem;
 }
 
-.media-list {
+.media-list > .row {
 	margin: 0 auto;
 	display: flex;
 	width: calc(100% - 25rem);
 }
 
-.media-list > .media-item {
+.media-list .media-item {
 	flex: 1;
 	margin: 1rem;
 }
@@ -244,6 +244,7 @@ html, body {
 
 .feature-box.media-box .fbox-desc h4,
 .feature-box.media-box .fbox-desc div {
+	margin-top: 2rem;
 	font-size: 0.75em;
 	color: rgb(254, 254, 0);
 	font-weight: 100;
@@ -251,13 +252,23 @@ html, body {
 }
 
 .feature-box.media-box .fbox-desc div {
-	margin-top: 4rem;
+	margin-top: 7rem;
 	font-size: 2.5em;
-	color: white;
+	color: rgb(96, 172, 64);
 }
 
 .media-item .feature-box.media-box {
-	height: 17rem;
+	height: 24rem;
+}
+
+@media(max-width:1200px) {
+	.feature-box.media-box .fbox-desc div {
+		margin-top: 0rem;
+	}
+
+	.media-item .feature-box.media-box {
+		height: 17rem;
+	}
 }
 
 .team-item {
@@ -293,6 +304,12 @@ html, body {
 	padding-top: 13.75rem;
 }
 
+#section-hero.bg-stringlabs {
+	background-image: linear-gradient(to bottom right, rgba(26, 20, 56, 0.85), rgba(58, 84, 111, 0.85)), url('../images/bg-stringlabs.png');
+	background-size: contain;
+	background-repeat: repeat;
+}
+
 #section-work .feature-box.media-box.expanded {
 	height: 60rem;
 }
@@ -320,18 +337,27 @@ html, body {
 	margin: 0 auto;
 }
 
-#team-desc,
-#research-desc {
+.sidebar-content {
 	width: 21rem;
-	margin: 12rem 0 0 -23rem;
+	height: 28rem;
+	margin: 16rem 0 0 -23rem;
+	position: absolute;
+	z-index: 100;
+	max-height: 32rem;
+	overflow-y: auto;
+	transition: opacity 1s ease;
 }
 
-#team-desc {
-	transition: opacity 1s ease;
+#video-filters {
+	overflow-y: auto;
+	margin: 18rem 0 0 -24.5rem;
+	cursor: pointer;
 }
 
 #team-desc > h6,
 #team-desc > h3,
+#video-filters > h6,
+#video-filters > h3,
 #research-desc > h3 {
 	font-size: 1.6em;
 	margin: 2rem 0;
@@ -339,19 +365,23 @@ html, body {
 }
 
 #team-desc > h6,
+#video-filters > h6,
 #research-desc > h3 {
 	color: rgb(254, 254, 0);
 }
 
+#video-filters > h3
 #team-desc > h3 {
 	font-weight: 400;
 }
 
+#video-filters > h6,
 #team-desc > h6 {
 	font-size: 1em;
 	margin: 0;
 }
 
+#video-filters > p,
 #team-desc > p,
 #research-desc > p {
 	margin: 1rem 0;
@@ -420,7 +450,7 @@ a,
 .page-section.dark .heading-block h2 {
   font-weight: 100;
   line-height: 1em;
-  color: rgba(255, 255, 255, 0.6);
+  color: rgba(255, 255, 255, 0.75);
 }
 
 .page-section.dark .heading-block p {
@@ -435,30 +465,20 @@ a,
 	font: 100 normal 1.1em 'Museo', sans-serif;
 	letter-spacing: 0.05em;
 	text-align: left;
-	text-transform: lowercase;
-	text-shadow: none;
-	opacity: 0.75;
-}
-
-#section-hero .heading-block p {
-	font: 100 normal 1.1em 'Museo', sans-serif;
-	letter-spacing: 0.05em;
-	text-align: left;
-	text-transform: lowercase;
 	text-shadow: none;
 	opacity: 0.75;
 }
 
 #section-hero.page-section.dark .heading-block h2 {
 	text-align: left;
+	font: 400 normal 7em 'Raleway', sans-serif;
 	max-width: calc(100% - 5rem);
-  font-weight: 600;
-  font-size: 6em;
   margin-left: 5rem;
   transition: font-size 0.2s ease;
+  word-spacing: 100vw;
 }
 
-@media(max-width:1144px) {
+@media(max-width:1200px) {
 	#section-hero.page-section.dark .heading-block h2 {
 		font-size: 4.5em;
 	}
@@ -468,8 +488,8 @@ a,
 	content: "";
 	float: left;
 	width: 0.25rem;
-	height: 20rem;
-	background: linear-gradient(to bottom, rgb(254, 254, 0), transparent);
+	height: 42rem;
+	background: linear-gradient(to bottom, rgb(254, 254, 0), transparent 50%);
 	margin-right: 4rem;
 }
 
