--- a/_layouts/outer.html
+++ b/_layouts/outer.html
@@ -133,6 +133,8 @@
         <!-- External JavaScripts
     	============================================= -->
         <script type="text/javascript" src="{{ base }}/js/jquery.js"></script>
+        <script src="https://use.typekit.net/hdz0duz.js"></script>
+        <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
         <!-- Footer Scripts
         ============================================= -->
