typekit, remove web font

--- a/css/custom.css
+++ b/css/custom.css
@@ -476,7 +476,7 @@ a,
 
 #section-hero.page-section.dark .heading-block h2 {
 	text-align: left;
-	font: 400 normal 7em 'Raleway', sans-serif;
+	font: 400 normal 7em 'Anivers', sans-serif;
 	max-width: calc(100% - 5rem);
   margin-left: 5rem;
   transition: font-size 0.2s ease;
