--- a/css/custom.css
+++ b/css/custom.css
@@ -255,6 +255,8 @@ html, body {
 	background: rgba(0, 0, 0, 0.25);
 	padding: 1rem;
 	height: 20rem;
+  max-width: 15rem;
+  min-width: 10rem;
 }
 
 .feature-box.media-box .fbox-desc h4,
@@ -267,13 +269,14 @@ html, body {
 }
 
 .feature-box.media-box .fbox-desc div {
-	margin-top: 7rem;
+	margin-top: 5rem;
 	font-size: 2.5em;
 	color: rgb(96, 172, 64);
 }
 
 .media-item .feature-box.media-box {
 	height: 24rem;
+	margin: 1rem;
 }
 
 @media(max-width:1200px) {
@@ -338,7 +341,7 @@ html, body {
 }
 
 #section-work .feature-box.media-box .fbox-media img {
-	width: 18rem;
+	width: 100px;
 	margin: 0 auto;
 }
 
@@ -357,6 +360,7 @@ html, body {
 
 .sidebar-content > h3 {
 	font-weight: 400;
+	color: white;
 }
 
 .sidebar-content > h6 {
@@ -408,6 +412,14 @@ html, body {
 	height: 6rem;
 	line-height: 6rem;
 	padding-top: 0;
+}
+
+#research-infographic {
+	width: 44rem;
+	height: 44rem;
+	background: black;
+	border-radius: 100vw;
+	margin: 0 0 0 8rem;
 }
 
 /* 4. Typography
