--- a/css/custom.css
+++ b/css/custom.css
@@ -255,7 +255,9 @@ html, body {
 	background: rgba(0, 0, 0, 0.25);
 	padding: 1rem;
 	height: 20rem;
-  min-width: 10rem;
+  min-width: 15rem;
+  max-width: 25rem;
+  margin: 0 auto;
 }
 
 .feature-box.media-box .fbox-desc h4,
