--- a/css/custom.css
+++ b/css/custom.css
@@ -91,8 +91,8 @@ html, body {
 	opacity: 1;
 }
 
-.team-list-container {
-	margin: 0 auto;
+.list-container {
+	margin: 7rem auto;
 	width: 73rem;
 }
 
@@ -518,6 +518,17 @@ a,
 #section-team > .container {
 	margin: 0 auto;
 	width: 51rem;
+}
+
+#section-team .sidebar-content {
+	width: 12rem;
+	opacity: 0;
+	transition: width 0.5s ease, opacity 0.5s ease;
+}
+
+#section-team .sidebar-content.expanded {
+	opacity: 1;
+	width: 20rem;
 }
 
 #section-investment .investment-desc {
