--- a/_layouts/outer.html
+++ b/_layouts/outer.html
@@ -174,9 +174,24 @@
                             handler: 'didClickSectionLink'
                         },
                         {
+                            listener: '#section-dfinity .feature-box.media-box',
+                            type: 'click',
+                            handler: 'didClickPresentationBox'
+                        },
+                        {
                             listener: '#section-team .container .team-image',
                             type: 'mouseover',
                             handler: 'didMouseoverTeamImage'
+                        },
+                        {
+                            listener: '#research-infographic',
+                            type: 'mouseover',
+                            handler: 'didMouseoverResearchFigure'
+                        },
+                        {
+                            listener: '#research-infographic',
+                            type: 'mouseout',
+                            handler: 'didMouseoutResearchFigure'
                         },
                         {
                             listener: '#page-wrap',
@@ -230,6 +245,14 @@
                         });
                     },
 
+                    didMouseoutResearchFigure(staticArgs, event) {
+                        return $('#section-research .list-container > .sidebar-content').removeClass('expanded');
+                    },
+
+                    didMouseoverResearchFigure(staticArgs, event) {
+                        return $('#section-research .list-container > .sidebar-content').addClass('expanded');
+                    },
+
                     didMouseoverTeamImage(staticArgs, event) {
                         let selector = event.target.localName === 'img' ? event.target : event.target.firstElementChild;
                         let name = $(selector).parent().next().find('.team-title > h4').html();
@@ -241,6 +264,10 @@
                         $('#section-team .sidebar-content > h3').html(title);
                         $('#section-team .sidebar-content > p').html(content);
                         return $(selector).parent().addClass('active');
+                    },
+
+                    didClickPresentationBox(staticArgs, event) {
+                        this.$(event.target).data().videoURL
                     },
 
                     didClickSectionLink(staticArgs, event) {
