--- a/css/custom.css
+++ b/css/custom.css
@@ -92,7 +92,7 @@ html, body {
 }
 
 .list-container {
-	margin: 7rem auto;
+	margin: 10rem auto;
 	width: 73rem;
 }
 
@@ -184,7 +184,8 @@ html, body {
 	z-index: 100;
 	width: 100%;
 	height: 10rem;
-	background: #39464c;
+	background: #222;
+	border-color: #222;
 }
 
 #copyrights {
@@ -263,6 +264,7 @@ html, body {
 	height: 20rem;
   max-width: 15rem;
   margin: 0 auto;
+  cursor: pointer;
 }
 
 .feature-box.media-box .fbox-desc h4,
@@ -520,15 +522,26 @@ a,
 	width: 51rem;
 }
 
+#section-research .sidebar-content,
 #section-team .sidebar-content {
 	width: 12rem;
 	opacity: 0;
-	transition: width 0.5s ease, opacity 0.5s ease;
+	transition: width 0.25s ease, opacity 0.25s ease;
 }
 
+#section-research .sidebar-content.expanded {
+	margin-right: 4rem;
+}
+
+#section-research .sidebar-content.expanded,
 #section-team .sidebar-content.expanded {
 	opacity: 1;
 	width: 20rem;
+}
+
+#research-infographic {
+	margin: 0 0 0 2.5rem;
+	cursor: pointer;
 }
 
 #section-investment .investment-desc {
