--- a/_layouts/outer.html
+++ b/_layouts/outer.html
@@ -174,9 +174,14 @@
                             handler: 'didClickSectionLink'
                         },
                         {
-                            listener: '#section-dfinity .feature-box.media-box',
+                            listener: '#section-dfinity .media-item',
                             type: 'click',
                             handler: 'didClickPresentationBox'
+                        },
+                        {
+                            listener: '#overlay, #close-overlay',
+                            type: 'click',
+                            handler: 'didClickCloseOverlay'
                         },
                         {
                             listener: '#section-team .container .team-image',
@@ -266,8 +271,21 @@
                         return $(selector).parent().addClass('active');
                     },
 
+                    didClickCloseOverlay(staticArgs, event) {
+                        if(event.target.localName !== 'iframe') {
+                            $(document.body).removeClass('no-scroll');
+                            return $('#overlay').html('').removeClass('show');
+                        }
+                    },
+
                     didClickPresentationBox(staticArgs, event) {
-                        this.$(event.target).data().videoURL
+                        let videoURL = (
+                            $(event.target).data('video-url') ||
+                            $(event.target).parent().data('video-url') ||
+                            $(event.target).parent().parent().data('video-url')
+                        );
+                        $(document.body).addClass('no-scroll');
+                        return $('#overlay').html('<iframe src="' + videoURL + '" frameborder="0" allowfullscreen></iframe>').addClass('show');
                     },
 
                     didClickSectionLink(staticArgs, event) {
@@ -306,7 +324,7 @@
                     }
                 }.didLoad();
 
-                // Moved a rogue function `dfinityDeckLang` to the page component
+                // JSON-P callbacks
                 dfinityDeckLang = Page.initDeckLang;
             });
         </script>
